# carbonfootprint

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  ACCESSIBILITY_COMPLIANCE_REPORT.md  CODE_QUALITY_STANDARDS.md  Dockerfile  Makefile  PERFORMANCE_REPORT.md  README.md  SECURITY.md  SECURITY_ARCHITECTURE.md  TESTING_STRATEGY.md  firestore.rules
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/carbon/: __init__.py  calculator.py  factors.py
backend/app/core/: __init__.py  config.py  rate_limit.py  safety.py  security.py
backend/app/models/: __init__.py  carbon.py  insights.py
backend/app/routes/: __init__.py  calculate.py  entries.py  health.py  insights.py
backend/app/services/: __init__.py  bigquery_service.py  firestore_service.py  gemini_service.py  pubsub_service.py
backend/tests/: conftest.py  test_calculator.py  test_gemini_fallback.py  test_routes.py  test_safety.py  test_services.py  test_validation.py
docs/: ARCHITECTURE.md  JUDGE_EVIDENCE.md  PRD.md  PRE_SUBMISSION_AUDIT.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  test-setup.ts  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/Calculator/: CarbonForm.tsx  CategoryChart.tsx  ResultsDisplay.tsx
frontend/src/components/History/: HistoryChart.tsx  HistoryTable.tsx
frontend/src/components/Insights/: InsightCard.tsx  InsightsList.tsx
frontend/src/components/shared/: ErrorBoundary.tsx  LoadingSpinner.tsx  SkipLink.tsx
frontend/src/hooks/: useCarbon.ts  useHistory.ts  useInsights.ts
frontend/src/store/: carbonStore.ts
frontend/src/styles/: accessibility.css
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts  validators.ts
frontend/tests/: CarbonForm.test.tsx  ResultsDisplay.test.tsx  accessibility.test.tsx  api.test.ts  components.test.tsx  storeAndHooks.test.tsx  validators.test.ts
